--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="js/main.js"></script>
 		<script src="js/settings.js"></script>
 		<script src="js/levels.js"></script>
+		<script src="js/Level.js"></script>
 	</head>
 
 	<body>
